apps/platform/pihole/ingressroutetcp-dot.yaml
# DNS-over-TLS (DoT) on 853/TCP.
# Traefik terminates TLS with wildcard cert and forwards plain DNS/TCP to Pi-hole.
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-dns-dot
  namespace: platform
spec:
  entryPoints:
    - dottcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns
          namespace: platform
          port: dns
          nativeLB: false
  tls: {}
